--- a/site-portfolio/style.css
+++ b/site-portfolio/style.css
@@ -10,34 +10,35 @@
   margin: 0 auto;
   padding-left: 32px;
   padding-right: 32px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .header {
   border: 1px solid black;
-  height: 200px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+}
+
+.header .menu {
+  padding: 32px 0;
+}
+
+.header .menu_list {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .content {
   border: 1px solid black;
-  height: 400px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .content .roadMap {
   width: 100%;
-  border: 1px solid darkblue;
   height: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .content .roadMap_item {
-  border: 1px solid blue;
   height: 70px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -45,34 +46,60 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .content .roadMap_item_checkPoint {
   width: 70px;
   height: 100%;
-  border: 1px solid red;
   position: relative;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 .content .roadMap_item_checkPoint .verticalLine {
-  left: 30px;
-  width: 5px;
-  height: 66px;
+  height: 70px;
   margin: 0 auto;
-  background-color: #00ce00;
+  background-color: #00796B;
   position: absolute;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  width: 5px;
+  left: 30px;
 }
 
-.content .roadMap_item_content {
-  width: 100%;
-  height: 100%;
-  border: 1px solid purple;
+.content .roadMap_item_checkPoint .verticalLine_start {
+  top: 35px;
+  height: 35px;
+}
+
+.content .roadMap_item_checkPoint .verticalLine_middle_notC {
+  background-color: #9e9e9e;
+}
+
+.content .roadMap_item_checkPoint .verticalLine_end {
+  height: 35px;
+  background-color: #9e9e9e;
+}
+
+.content .roadMap_item_checkPoint .circle {
+  top: 17px;
+  left: 17px;
+  height: 30px;
+  width: 30px;
+  background-color: #80CBC4;
+  border-radius: 30px;
+  position: absolute;
+  text-align: center;
+  border: 5px solid #00796B;
+  display: table;
+}
+
+.content .roadMap_item_checkPoint .circle_notC {
+  border: 5px solid #9e9e9e;
+  background-color: gainsboro;
+}
+
+.content .roadMap_item_checkPoint .circle p {
+  vertical-align: middle;
+  display: table-cell;
+  margin: 0 0;
+  padding: 0 0;
 }
 
 .footer {
