Add project block

--- a/site-portfolio/style.css
+++ b/site-portfolio/style.css
@@ -144,6 +144,32 @@
   content: "✖";
 }
 
+.content .projects .project_item1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.content .projects .project_item2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.content .projects .project_img {
+  width: 30%;
+}
+
 .footer {
   border: 1px solid black;
   height: 200px;
